# dw-event-handler-celery

./: Makefile  pyproject.toml
dw_event_handler_celery/: __init__.py  handler.py
dw_event_handler_celery/tests/unit/: event_handler_test.py
