[tool.poetry]
name = "dw-event-handler-celery"
version = "0.0.0"
description = "Downwind Celery Handler"
authors = ["Guto Maia <guto@guto.net>"]

[tool.poetry.dependencies]
python = "^3.11"
dw-events = {path = "../dw-events"}


inject = "^5.2.1"
celery = "^5.4.0"
[tool.poetry.group.dev.dependencies]
bandit = "^1.7.8"
blue = "^0.9.1"
cython = "^3.0.10"
git-changelog = "^2.4.1"
m2r = "^0.3.1"
numpy = "^1.26.4"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pytest-watch = "^4.2.0"
sphinx-autodoc-typehints = "^2.0.0"
sphinx-multiversion = "^0.2.4"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-plantuml = "^0.29"
javascripthon = "^0.12"
ghp-import = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."ports"]
"test-notify" = "dw_events.notify:notify_send"
"tasker" = "dw_events.notify:Tasker"
